# first-sfml-project

./: CMakeLists.txt
include/: action.h  actionmap.tpl  actiontarget.tpl  collision.h  configuration.h  enemy.h  entity.h  game.h  player.h  random.h  resourcemanager.h  resourcemanager.tpl  saucer.h  shoot.h  world.h
src/: action.cpp  collision.cpp  configuration.cpp  enemy.cpp  entity.cpp  game.cpp  main.cpp  player.cpp  saucer.cpp  shoot.cpp  world.cpp
